--- a/plass-ide-backend/package.json
+++ b/plass-ide-backend/package.json
@@ -5,8 +5,11 @@
   "main": "build/app.js",
   "scripts": {
     "build": "npm run lint && npm run clean && tsc",
+    "tsc":"tsc",
+    "test":"node build/src/app.js",
+
     "clean": "rimraf build",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "tslint -s --project tsconfig.json",
     "start": "ts-node src/app.ts",
     "start:live": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/app.ts"
   },
