--- a/plass-ide-frontend/package.json
+++ b/plass-ide-frontend/package.json
@@ -20,6 +20,7 @@
     "core-js": "^2.5.4",
     "ng2-ace-editor": "^0.3.8",
     "ngx-perfect-scrollbar": "^7.1.0",
+    "node-sass": "^4.14.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.3",
     "rxjs": "~6.3.3",
